--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "cubetiq"
   ],
   "author": "Sambo Chea",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.17.1"
+  }
 }
